ingress-controller/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ivicos-ingress
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ivicos-ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: ivicos-ingress
  tls:
  - hosts:
    - ivicos-ionos-test.ivicos-campus.app
    - gateway.ivicos-campus.app
    - realtime.ivicos-campus.app
    secretName: ivicos-new-tls
  rules:
    - host: ivicos-ionos-test.ivicos-campus.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: v1-campus-alpha-client-service
                port:
                  number: 80
    - host: gateway.ivicos-campus.app
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: v1-gateway-service
                port:
                  number: 8080
    - host: realtime.ivicos-campus.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: v1-campus-realtime-api-service
                port:
                  number: 3000
